--- a/src/sass/components/quick-access.scss
+++ b/src/sass/components/quick-access.scss
@@ -58,6 +58,7 @@
     font-size: 0.7rem;
     text-align: center;
     border-radius: 0.5rem;
+    text-wrap: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
   }
